fixed overflow

--- a/assets/styles/AdaptionChips.css
+++ b/assets/styles/AdaptionChips.css
@@ -34,6 +34,8 @@
 }
 
 .adaptions-holder {
+    height: 308px;
+    overflow: auto;
     padding: 10px;
 }
 
